
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* plaintext; int cyphertext; } ;


 char* hex2str (int ) ;
 char* key ;
 int nAccounts ;
 TYPE_1__** pAccounts ;
 int strlen (char*) ;

void decrypt()
{
 int n, x;
 char *plain, *cypher;

 for ( x = 0 ; x < nAccounts ; x++ )
 {
  cypher = hex2str(pAccounts[x]->cyphertext);
  plain = pAccounts[x]->plaintext;

  for ( n = 0 ; n < (strlen(cypher)-1) ; n++ )
  {
   plain[n] = cypher[n] ^ key[n];
  }
 }
}
